[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph420_lab01"
version = "0.0.1"
authors = [
{ name="Marc Laberge", email="marc.laberge@ucalgary.ca" },
]
description="Newton-Cotes and Gauss Quadtrature integration algorithms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
"scipy"
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/MarcLaBerge/goph420_w2024_lab01_stML.git"